feat: make it run for Java 8
Signed-off-by: Anton Grigorev <anton.grigorev@broadcom.com>