@@ -16,6 +16,7 @@
 package com.broadcom.lsp.cobol.core.model.variables;
 
 import com.broadcom.lsp.cobol.core.model.Locality;
+import com.google.common.collect.ImmutableList;
 import lombok.EqualsAndHashCode;
 import lombok.ToString;
 import lombok.Value;
@@ -50,7 +51,7 @@ public class ConditionDataName extends AbstractVariable {
 
   @Override
   public List<ConditionDataName> getConditionNames() {
-    return List.of();
+    return ImmutableList.of();
   }
 
   @Override
